# taskfiles

./: .gitignore  .pre-commit-config.yaml  .whitesource  Dockerfile  Dockerfile.cicd  Dockerfile.cicd-alpine  README.md  __about__.py  __init__.py  _ctlptl.py  _discovery.py  _utils.py  conftest.py  core.py  cos.py  env.py  git.py  k8s.py  lima.py  osx.py  pyoxidizer.bzl  pyproject.toml  python.py  setup.py  setup.sh  ssh.py
.devcontainer/: devcontainer.json
_tests/: compose.yaml  entrypoint.sh
_tests/integration/: test_build_alpine.py
src/taskfiles/: __about__.py  __init__.py  __main__.py  _ctlptl.py  _discovery.py  _github.py  _program.py  _utils.py  core.py  docker.py  git.py  main.py  plugins.py  program.py  setup.py  ssh.py
tests/: compose.yaml  tasks.py
tests/integration/: test_build_alpine.py  test_execution_modes.py  test_package.py  test_program.py
