[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tasks"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.7"
license = "BSD-3-Clause"
keywords = []
authors = [{ name = "Nahuel Defossé", email = "D3f0@users.noreply.github.com" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["invoke<3.0"]

[tool.hatch.version]
path = "__about__.py"


[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
  "hunter<4.0",
  "shiv==1.0.3",
  "pdbpp==0.10.3",
]

[tool.hatch.envs.default.scripts]
list-dev-tasks = "inv -r _tests/ -l"
run-dev-task = "inv -r _tests/ {args:run-in-docker}"
test = "pytest {args:.}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = ["- coverage combine", "coverage report"]
cov = ["test-cov", "cov-report"]


[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11"]

[tool.hatch.envs.lint]
detached = true
dependencies = ["black>=23.1.0", "mypy>=1.0.0", "ruff>=0.0.243"]
[tool.hatch.envs.lint.scripts]
typing = "mypy --install-types --non-interactive {args:src/tasks tests}"
style = ["ruff {args:.}", "black --check --diff {args:.}"]
fmt = ["black {args:.}", "ruff --fix {args:.}", "style"]
all = ["style", "typing"]


[tool.ruff]
target-version = "py38"
line-length = 90
select = [
  "A",
  "ARG",
  "B",
  "C",
  "DTZ",
  "E",
  "EM",
  "F",
  "FBT",
  "I",
  "ICN",
  # "ISC",
  "N",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "Q",
  "RUF",
  "S",
  "T",
  "TID",
  "UP",
  "W",
  "YTT",
]
ignore = [
  # Allow non-abstract empty methods in abstract base classes
  "B027",
  # Allow boolean positional values in function calls, like `dict.get(... True)`
  "FBT003",
  # Ignore checks for possible passwords
  "S105",
  "S106",
  "S107",
  # Ignore complexity
  "C901",
  "PLR0911",
  "PLR0912",
  "PLR0913",
  "PLR0915",
  "T201",

  # Rules for Invoke tasks
  # Relative imports
  "TID252",
  # Boolean default positional
  "FBT002",
  # Unused argument (for ctx)
  "ARG001",
  # Non mutable structure
  "B006",

  # arg: List[x] = None,
  "RUF013",
  # datetimes w/o tz
  "DTZ005",
  # subprocess calls
  "PLW1510",
  # More subprocess call
  "S603",
  # Default boolean argument
  "FBT001",
  # Inline exception messages
  "EM101",
]
unfixable = [
  # Don't touch unused imports
  "F401",
]

[tool.ruff.isort]
known-first-party = ["tasks"]

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"_tests/**/*" = ["PLR2004", "S101", "TID252"]

"**/k8s.py" = [
  # Mixed case for kubernetes
  "S108",
  "N815",
  "N806",

]

[tool.coverage.run]
source_pkgs = ["tasks", "tests"]
branch = true
parallel = true
omit = ["src/tasks/__about__.py"]

[tool.coverage.paths]
tasks = ["src/tasks", "*/tasks/src/tasks"]
tests = ["tests", "*/tasks/tests"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]


[tool.ruff.mccabe]
max-complexity = 5


[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["_tests"]


[tool.codespell]
skip = '_plugin,_vendor,dist'
count = ''
quiet-level = 3
